templates/deployment-jenkins-apm-enabled.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    container.io/container-0: /cce2.0/img/9b43d4e9a622b73ffca2b77d3a78b3ad.png
    description: ""
  labels:
    appgroup: ""
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        metrics.alpha.kubernetes.io/custom-endpoints: '[{"api":"","path":"","port":"","names":""}]'
      creationTimestamp: null
      labels:
        app: jenkins
    spec:
      affinity: {}
      containers:
      - env:
        - name: PAAS_APP_NAME
          value: jenkins
        - name: PAAS_NAMESPACE
          value: nginx
        - name: PAAS_PROJECT_ID
          value: 7f162be0dc4940bf8458171242f7a88c
        # APM ENV begin
        - name: PAAS_MONITORING_GROUP
          value: jenkins
        - name: JAVA_TOOL_OPTIONS
          value: -javaagent:/paas-apm/collectors/pinpoint/pinpoint-bootstrap.jar -Dpinpoint.config=/paas-apm/collectors/pinpoint/pinpoint.config
            -Duser.stemming.config=/paas-apm/collectors/pinpoint/userStemming.config
        - name: PAAS_CLUSTER_ID
          value: 99dce176-2ed6-11e9-9ea5-0255ac101421
        # APM ENV end
        image: jenkins/jenkins:2.150.3
        imagePullPolicy: IfNotPresent
        name: container-0
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/localtime
          name: vol-localtime
          readOnly: true
        - mountPath: /var/jenkins_home
          name: cce-evs-jenkins
        #APM mount path
        - mountPath: /paas-apm/collectors/pinpoint/
          name: paas-apm
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: default-secret
      # APM init container
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 300
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 300
      volumes:
      - hostPath:
          path: /etc/localtime
          type: ""
        name: vol-localtime
      - name: cce-evs-jenkins
        persistentVolumeClaim:
          claimName: cce-evs-jenkins
      - emptyDir: {}  #APM volume
        name: paas-apm
