templates/deployment-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    container.io/container-0: /cce2.0/img/9b43d4e9a622b73ffca2b77d3a78b3ad.png
    deployment.kubernetes.io/revision: "1"
    description: ""
  generation: 1
  labels:
    appgroup: ""
  name: jenkins
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        metrics.alpha.kubernetes.io/custom-endpoints: '[{"api":"","path":"","port":"","names":""}]'
      creationTimestamp: null
      labels:
        app: jenkins
    spec:
      affinity: {}
      containers:
      - env:
        - name: PAAS_APP_NAME
          value: jenkins
        - name: PAAS_NAMESPACE
          value: nginx
        - name: PAAS_PROJECT_ID
          value: 7f162be0dc4940bf8458171242f7a88c  #replace to your own project id
        image: jenkins/jenkins:2.150.3 #replace to your own image
        imagePullPolicy: IfNotPresent
        name: container-0
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/localtime
          name: vol-localtime
          readOnly: true
        - mountPath: /var/jenkins_home
          name: cce-evs-jenkins
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: default-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 300
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 300
      volumes:
      - hostPath:
          path: /etc/localtime
          type: ""
        name: vol-localtime
      - name: cce-evs-jenkins
        persistentVolumeClaim:
          claimName: cce-evs-jenkins
